--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc & vite build",
-    "preview": "vite preview"
+    "build": "tsc & vite build"
   },
   "devDependencies": {
-    "npm-check-updates": "^19.4.1",
+    "npm-check-updates": "^19.6.3",
     "typescript": "^5.9.3",
     "vite": "^7.3.1"
   },
