--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_KINDE_CLIENT_ID='6816c0b48dc84cd9b26ae44b18bc18ad'
-VITE_KINDE_DOMAIN='https://sixbuckssolutionsllc.kinde.com'
+VITE_KINDE_DOMAIN='https://auth.jamstack-auth.publicntp.net'
 VITE_KINDE_REDIRECT_URL='https://jamstack-auth.publicntp.net'
 VITE_KINDE_LOGOUT_URL='https://jamstack-auth.publicntp.net'
